--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,4 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -28,11 +16,85 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App .twitter-lists, .twitter-list-header {
+  display: flex;
+}
+
+.App .twitter-list-header {
+  align-items: center;
+}
+
+.App .twitter-list-header > div {
+  flex: 1;
+  margin: 0.5rem;
+}
+
+.App .twitter-list {
+  flex: 1;
+  border: 1px black solid;  
+  margin: 0.5rem;
+}
+
+.App .tweet-list {
+  list-style: none;
+  width: 100%;
+  height: 100%;
+  padding-inline-start: 0;
+  margin: 0;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+
+.App .tweet-list.drop-active {
+  background-color: mediumorchid;
+}
+
+.App .tweet-list > .tweet-list-item {
+  border: 1px black solid;
+  margin: 0.25em;
+  padding: 0.25em;
+}
+
+.App .tweet-list > .tweet-list-item.active {
+  background-color: lightsalmon;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.App .tweet-list > .tweet-list-item > .tweet-item-header {
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.App .tweet-list > .tweet-list-item div:last-child {
+  margin-left: auto;
+}
+
+.App .search-input > input {
+  height: 1.5rem;
+  width: 15rem;
+}
+
+.App .search-input > button {
+  height: 1.9rem;
+  width: 5rem;
+}
+
+.App .search-input > div {
+  visibility: hidden;
+  color: red;
+}
+
+
+.App .search-input > input.error {
+  border:1px solid red;
+}
+
+.App .search-input > input.error:focus {
+  outline: none;
+}
+
+.App .search-input > div.error {
+  visibility: visible;
 }
